Update on Overleaf.

--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -1,46 +1,26 @@
-The beauty of scientific research lies not in the results but in the methodologies that got us there. 
-It lies in the backgrounds we learn from and the introductions we make that shape our relationship with the world and the people in it.
-I would not be where I am today without the support of many people who have contributed to my journey in various ways.
-
 First and foremost, I would like to thank my co-chairs, Chris Groppi and Jim Bell, for their invaluable guidance and support throughout my growth as a researcher.
 Between the two of you, you have taught me to be a better engineer and scientist, and encouraged me to find as many ways to combine those two as possible.
-I know the word interdisciplinary is often overused at Arizona State University, but I truly believe that you two pushed expanded my understanding of what it means to be an interdisciplinary researcher.
-You gave me the freedom to explore my interests and the guidance to keep me on track when I was too zoned in to see the bigger picture.
+You gave me the freedom to explore my interests and the guidance to keep me on track when I was too zoomed in to see the bigger picture.
 I would especially like to thank Chris for not only being an amazing mentor, but also a great friend.
-Chris has been in my corner since the beginning, and I am grateful for his unwavering support, encouragement and the occasional restaurant recommendation.
-
-I would also like to thank my committee members, Hannah Kerner, Phil Mauskopf, and Nargess Memarsadeghi. 
-The three of you have shaped my understanding of Novelty Detection, Astronomy, and Systems Engineering, respectively.
-Your insights whenever I was stuck on a problem or needed a new perspective were lifesaving, often times instantly leading to an obvious solution that had been staring me in the face.
-I would not be where I am today if it wasn't for Phil's encouragement for me to check out the lab many years ago as an undergraduate student.
-Hannah is who introduced me to the world of Novelty Detection, and helped me get started on my first research project as a PhD student.
-And finally, Nargess has been a constant source of support, being a mentor for me throughout my time as a NASA Space Technology Research Fellow.
+In addition, I would also like to thank my committee members, Hannah Kerner, Phil Mauskopf, and Nargess Memarsadeghi for their contributions and mentorship throughout the years. 
 
 I would like to thank Jose Siles, Jon Kawamura, Jorge Pineda, and the rest of the ASTHROS team for their support and collaboration.
 Without Jose's trust in me to take on the role of Software Lead as a graduate student, I would not have had the opportunity to work on such an amazing project.
 We have spent countless hours working together to make ASTHROS a reality, and I could not have asked for a more fulfilling project to work on.
-I will forever cherish the moments we spent sipping margaritas in Fort Sumner to eating spicy chicken in Pasadena and everything in between.
-Jon was always there to help whenever I needed to rubber duck a problem or go for a walk to clear my head.
-And finally, Jorge has been an incredible science mentor, helping me understand how to think like an astrophysicist without giving away the answers, leading to a much more satisfying solution.
+In the same vein, I would like to thank both the Roman Space Telescope Wide Field Instrument Science Data Pipeline (RST WFI SDP) team and the Machine Learning and Instrument Autonomy (MLIA) group for all of your support and collaborations.
 
 I would also like to thank my fellow graduate students, especially those in the basement, for their years of friendship.
 Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Ryan Stephenson, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many others, the ISTB4 would be a very dull place to work. 
 For almost a decade, y'all have made the lab a second home for me and I am forever grateful for the stories, drinks, and laughs we have shared throughout our time together.
-I would also like to thank Christian Thompson in particular for being a wonderful cook, an invaluable friend, a great roommate, and the very best mentee I could have asked for.
-Chris jokingly said that he needed two of me to get everything done, and I think Christian far exceeded our expectations in that regard.
-With Christian at my side, I knew I would always have someone nearby to help me debug code, brainstorm ideas, or judge the latest programming sin I had committed.
+I would also like to thank Christian Thompson in particular for being a wonderful cook, an invaluable friend, a great roommate, and the very best mentee I could have ever asked for.
 
 A special thanks go to the family and friends who have supported me throughout this journey. 
-You have seen me through my highs and my lows throughout my PhD and have always encouraged me to keep going and finish strong.
 From very early on, my parents have always challenged me to be independent and to pursue my passions, both skills that have served me well throughout my time at ASU.
-I would not be where I am today without their encouragement.
-There are far too many friends to name individually, but I would like to thank you all for putting up with me being in school for so long and always there whenever I needed a break from the lab.
+I would not be where I am today without their encouragement and support.
+There are far too many friends to name individually, but I would like to thank you all for putting up with me being in school for so long and always being there whenever I needed a break from the lab.
 
-I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership (SURP), the JPL Visiting Student Researcher Program (JVSRP) and the NASA Space Technology Graduate Research Opportunity for their support throughout my PhD. 
+I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership (SURP), and the NASA Space Technology Graduate Research Opportunity for their financial support throughout my PhD. 
 This work was supported by a NASA Space Technology Graduate Research Opportunity (NSTGRO). 
 It was an incredible privilege to have an NSTGRO fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
-The NSTGRO also connected me with many amazing people at Goddard Space Flight Center (GSFC) and JPL who have been excellent collaborators.
-In particular, I would like to thank Jennifer Yin, Analia Cillis, and the rest of the Roman Space Telescope Wide Field Instrument Science Data Pipeline team for the opportunity and support throughout my time at GSFC.
-I would also like to thank the JPL Machine Learning and Instrument Autonomy Group, especially Lukas Mandrake, Jack Lightholder, Kiri Wagstaff, and Jake Lee, for their support and collaboration throughout my time at JPL.
 
-And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love and 
+And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love and support. 
