Update on Overleaf.

--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -19,8 +19,8 @@ From very early on, my parents have always challenged me to be independent and t
 I would not be where I am today without their encouragement and support.
 There are far too many friends to name individually, but I would like to thank you all for putting up with me being in school for so long and always being there whenever I needed a break from the lab.
 
-I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership (SURP), and the NASA Space Technology Graduate Research Opportunity for their financial support throughout my PhD. 
-This work was supported by a NASA Space Technology Graduate Research Opportunity (NSTGRO). 
-It was an incredible privilege to have an NSTGRO fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
+I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership, and the NASA Space Technology Graduate Research Opportunity for their financial support throughout my PhD. 
+This work was supported by a NASA Space Technology Graduate Research Opportunity. 
+It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
 And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love and support. 
