--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -23,4 +23,8 @@ I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic Un
 This work was supported by a NASA Space Technology Graduate Research Opportunity. 
 It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
-And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love and support. 
+And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love and lifelong collaboration. 
+Pursuing a PhD is an endeavor in and of itself, but pursuing two PhDs at the same time is a whole other level of challenge.
+Thank you for reminding me to take breaks and being a beacon of light whenever I was lost in the mind-numbing perpetuity of my own research.
+Like research, life is not just about the results but the methods we develop along the way.
+I am forever grateful for the methods we have developed to work together and eagerly look forward to our future work.
