Update on Overleaf.

--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -1,7 +1,6 @@
 First and foremost, I would like to thank my co-chairs, Chris Groppi and Jim Bell, for their invaluable guidance and support throughout my growth as a researcher.
 Between the two of you, you have taught me to be a better engineer and scientist, and encouraged me to find as many ways to combine those two as possible.
-You gave me the freedom to explore my interests and the guidance to keep me on track when I was too zoomed in to see the bigger picture.
-I would especially like to thank Chris for not only being an amazing mentor, but also a great friend.
+I would especially like to thank Chris for not only being an amazing mentor, but also a great friend with excellent taste. 
 In addition, I would also like to thank my committee members, Hannah Kerner, Phil Mauskopf, and Nargess Memarsadeghi for their contributions and mentorship throughout the years. 
 
 I would like to thank Jose Siles, Jon Kawamura, Jorge Pineda, and the rest of the ASTHROS team for their support and collaboration.
@@ -24,7 +23,6 @@ This work was supported by a NASA Space Technology Graduate Research Opportunity
 It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
 And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love and lifelong collaboration. 
-Pursuing a PhD is an endeavor in and of itself, but pursuing two PhDs at the same time is a whole other level of challenge.
-Thank you for reminding me to take breaks and being a beacon of light whenever I was lost in the mind-numbing perpetuity of my own research.
+Pursuing a PhD is an endeavor in and of itself, but pursuing two PhDs at the same time exponentially increases the challenge.
 Like research, life is not just about the results but the methods we develop along the way.
-I am forever grateful for the methods we have developed to work together and eagerly look forward to our future work.
+I am forever grateful for the methods we have developed, the results we've made, and our many future works to come.
