--- a/src/sections/dedication.tex
+++ b/src/sections/dedication.tex
@@ -1,5 +1,5 @@
 \leavevmode\vfill
 \begin{center}
-To my cat, who had to put up with me every time I needed a break.    
+To my cat, Peanut Butter, who had to put up with me every time I needed a break
 \end{center}
 \vfill
