Update on Overleaf.

--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -22,7 +22,6 @@ I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic Un
 This work was supported by a NASA Space Technology Graduate Research Opportunity. 
 It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
-And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love and lifelong collaboration. 
-Pursuing a PhD is an endeavor in and of itself, but pursuing two PhDs at the same time exponentially increases the challenge.
-Like research, life is not just about the results but the methods we develop along the way.
-I am forever grateful for the methods we have developed, the results we've made, and our many future works to come.
+And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love as my lifelong collaborator. 
+Pursuing a PhD is an endeavor in and of itself, but pursuing two PhDs at the same time is exponentially more difficult.
+Like research, life is not just about the results but the methods we develop along the way, and I am forever grateful for the journey we've taken together and our future work to come.
