Update on Overleaf.

--- a/src/sections/dedication.tex
+++ b/src/sections/dedication.tex
@@ -1,5 +1,6 @@
 \leavevmode\vfill
 \begin{center}
-To my cat, Peanut Butter, who had to put up with me every time I needed a break
+To my cat, Peanut Butter, who waltzed into my life when I started this degree and decided to call this place home.
+Thank you for being my best friend and putting up with my incessant need to pet you.
 \end{center}
 \vfill
