--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -1,16 +1,16 @@
 First and foremost, I would like to thank my co-chairs, Chris Groppi and Jim Bell, for their invaluable guidance and support throughout my growth as a researcher.
 Between the two of you, you have taught me to be a better engineer and scientist, and encouraged me to find as many ways to combine those two as possible.
-I would especially like to thank Chris for not only being an amazing mentor, but also a great friend with excellent taste. 
+I would especially like to thank Chris for not only being an amazing mentor, but also a great friend with impeccable taste. 
 In addition, I would also like to thank my committee members, Hannah Kerner, Phil Mauskopf, and Nargess Memarsadeghi for their contributions and mentorship throughout the years. 
 
-I would like to thank Jose Siles, Jon Kawamura, Jorge Pineda, and the rest of the ASTHROS team for their support and collaboration.
+Thank you to Jose Siles, Jon Kawamura, Jorge Pineda, and the rest of the ASTHROS team for all the good times as well as the bad ones.
 Without Jose's trust in me to take on the role of Software Lead as a graduate student, I would not have had the opportunity to work on such an amazing project.
-We have spent countless hours working together to make ASTHROS a reality, and I could not have asked for a more fulfilling project to work on.
+From spicy margaritas in Fort Sumner to howlin' chicken in Pasadena, we have spent countless hours working together to make ASTHROS a reality, and I could not have asked for a more fulfilling project to work on.
 In the same vein, I would like to thank both the Roman Space Telescope Wide Field Instrument Science Data Pipeline (RST WFI SDP) team and the Machine Learning and Instrument Autonomy (MLIA) group for all of your support and collaborations.
 
 I would also like to thank my fellow graduate students, especially those in the basement, for their years of friendship.
-Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Ryan Stephenson, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many others, ISTB4 would be a very dull place to work. 
-For almost a decade, y'all have made the lab a second home for me and I am forever grateful for the stories, drinks, and laughs we have shared throughout our time together.
+Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Ryan Stephenson, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many, many, others, ISTB4 would be a very dull place to work. 
+For almost a decade, you all have made the lab a second home for me and I will always cherish the stories, drinks, and laughs we have shared.
 I would also like to thank Christian Thompson in particular for being a wonderful cook, an invaluable friend, a great roommate, and the very best mentee I could have ever asked for.
 
 A special thanks go to the family and friends who have supported me throughout this journey. 
