Update on Overleaf.

--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -12,6 +12,7 @@ I would also like to thank my fellow graduate students, especially those in the 
 Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Ryan Stephenson, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many, many, others, ISTB4 would be a very dull place to work. 
 For almost a decade, you all have made the lab a second home for me and I will always cherish the stories, drinks, and laughs we have shared.
 I would also like to thank Christian Thompson in particular for being a wonderful cook, an invaluable friend, a great roommate, and the very best mentee I could have ever asked for.
+With Christian, I always had someone nearby to help me debug code, brainstorm ideas, or judge my latest programming sins.
 
 A special thanks go to the family and friends who have supported me throughout this journey. 
 From very early on, my parents have always challenged me to be independent and to pursue my passions, both skills that have served me well throughout my time at ASU.
