--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -9,7 +9,7 @@ From spicy margaritas in Fort Sumner to howlin' chicken in Pasadena, we have spe
 In the same vein, I would like to thank both the Roman Space Telescope Wide Field Instrument Science Data Pipeline (RST WFI SDP) team and the Machine Learning and Instrument Autonomy (MLIA) group for all of your support and collaborations.
 
 I would also like to thank my fellow graduate students, especially those in the basement, for their years of friendship.
-Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Ryan Stephenson, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many, many, others, ISTB4 would be a very dull place to work. 
+Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many, many, others, ISTB4 would be a very dull place to work. 
 For almost a decade, you all have made the lab a second home for me and I will always cherish the stories, drinks, and laughs we have shared.
 I would also like to thank Christian Thompson in particular for being a wonderful cook, an invaluable friend, a great roommate, and the very best mentee I could have ever asked for.
 With Christian, I always had someone nearby to help me debug code, brainstorm ideas, or judge my latest programming sins.
