--- a/main.bib
+++ b/main.bib
@@ -1392,6 +1392,14 @@
   year    = {2023}
 }
 
+@book{yajima2009scientific,
+  title={Scientific ballooning: Technology and applications of exploration balloons floating in the stratosphere and the atmospheres of other planets},
+  author={Yajima, Nobuyuki and Izutsu, Naoki and Imamura, Takeshi and Abe, Toyoo},
+  volume={112},
+  year={2009},
+  publisher={Springer Science \& Business Media}
+}
+
 @article{yaml,
   title   = {Yaml ain't markup language (yaml) version 1.1},
   author  = {Ben-Kiki, Oren and Evans, Clark and Ingerson, Brian},
