Update on Overleaf.

--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -19,10 +19,10 @@ From very early on, my parents have always challenged me to be independent and t
 I would not be where I am today without their encouragement and support.
 There are far too many friends to name individually, but I would like to thank you all for putting up with me being in school for so long and always being there whenever I needed a break from the lab.
 
-I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership, and the NASA Space Technology Graduate Research Opportunity for their financial support throughout my PhD. 
+I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership, and the NASA Space Technology Graduate Research Opportunity for their financial support throughout my Ph.D. 
 This work was supported by a NASA Space Technology Graduate Research Opportunity. 
 It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
 And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love as my lifelong collaborator. 
-Pursuing a PhD is an endeavor in and of itself, but pursuing two PhDs at the same time is exponentially more difficult.
+Pursuing a Ph.D is an endeavor in and of itself, but pursuing two Ph.D's at the same time is exponentially more difficult.
 Like research, life is not just about the results but the methods we develop along the way, and I am forever grateful for the journey we've taken together and our future work to come.
