--- a/main.bib
+++ b/main.bib
@@ -1012,6 +1012,17 @@
   year    = {2012}
 }
 
+@article{puntanen1989equality,
+  title={The equality of the ordinary least squares estimator and the best linear unbiased estimator},
+  author={Puntanen, Simo and Styan, George PH},
+  journal={The American Statistician},
+  volume={43},
+  number={3},
+  pages={153--161},
+  year={1989},
+  publisher={Taylor \& Francis}
+}
+
 @article{pych2003fast,
   title     = {A fast algorithm for cosmic-ray removal from single images},
   author    = {Pych, Wojtek},
@@ -1090,6 +1101,16 @@
   journal = {Technical Report JWST-STScI-001928},
   pages   = {1928},
   year    = {2010}
+}
+
+@inproceedings{robberto2014generalized,
+  title={A generalized least square algorithm to process infrared data taken in non-destructive readout mode},
+  author={Robberto, M},
+  booktitle={Space Telescopes and Instrumentation 2014: Optical, Infrared, and Millimeter Wave},
+  volume={9143},
+  pages={1185--1195},
+  year={2014},
+  organization={SPIE}
 }
 
 @article{robberto2015cr,
