--- a/src/sections/abstract.tex
+++ b/src/sections/abstract.tex
@@ -1,4 +1,4 @@
-NASA missions are producing increasingly large and complex datasets, placing significant demands on mission operations teams to analyze, prioritize, and react to scientific data in near real-time.
+Space science missions are producing increasingly large and complex datasets, placing significant demands on mission operations teams to analyze, prioritize, and react to scientific data in near real-time.
 This dissertation presents the development, implementation, and evaluation of novelty detection systems designed to support mission operations across multiple fields of space science, including planetary exploration and astrophysics.
 Additionally, this work spans multiple domains, such as tactical planning, integration and testing, and onboard analysis, demonstrating the versatility of novelty detection techniques in various contexts.
 Often in mission operations, typical data is well understood, but unexpected data is difficult to identify and react to in a timely manner.
