--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -1,26 +1,27 @@
 First and foremost, I would like to thank my co-chairs, Chris Groppi and Jim Bell, for their invaluable guidance and support throughout my growth as a researcher.
-Between the two of you, you have taught me to be a better engineer and scientist, and encouraged me to find as many ways to combine those two as possible.
+Between the two of you, you have taught me to be a better engineer and scientist and encouraged me to find as many ways to combine those two as possible.
 I would especially like to thank Chris for not only being an amazing mentor, but also a great friend with impeccable taste. 
-In addition, I would also like to thank my committee members, Hannah Kerner, Phil Mauskopf, and Nargess Memarsadeghi for their contributions and mentorship throughout the years. 
+In addition, I would also like to thank my committee members, Hannah Kerner, Phil Mauskopf, and Nargess Memarsadeghi, for their contributions and mentorship throughout the years. 
 
 Thank you to Jose Siles, Jon Kawamura, Jorge Pineda, and the rest of the ASTHROS team for all the good times as well as the bad ones.
-Without Jose's trust in me to take on the role of Software Lead as a graduate student, I would not have had the opportunity to work on such an amazing project.
-From spicy margaritas in Fort Sumner to howlin' chicken in Pasadena, we have spent countless hours working together to make ASTHROS a reality, and I could not have asked for a more fulfilling project to work on.
-In the same vein, I would like to thank both the Roman Space Telescope Wide Field Instrument Science Data Pipeline (RST WFI SDP) team and the Machine Learning and Instrument Autonomy (MLIA) group for all of your support and collaborations.
+Without Jose's trust in me to take on the role of Software Lead as a graduate student, I would not have had the opportunity to work on such a fantastic project.
+From spicy margaritas in Fort Sumner to howlin' chicken in Pasadena, we have spent countless hours working together to make ASTHROS a reality. 
+I could not have asked for a more fulfilling project to work on.
+In the same vein, I would like to thank the Roman Space Telescope Wide Field Instrument Science Data Pipeline (RST WFI SDP) team and the Machine Learning and Instrument Autonomy (MLIA) group for all your support and collaboration.
 
 I would also like to thank my fellow graduate students, especially those in the basement, for their years of friendship.
 Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many, many, others, ISTB4 would be a very dull place to work. 
-For almost a decade, you all have made the lab a second home for me and I will always cherish the stories, drinks, and laughs we have shared.
-I would also like to thank Christian Thompson in particular for being a wonderful cook, an invaluable friend, a great roommate, and the very best mentee I could have ever asked for.
+For almost a decade, you all have made the lab a second home for me, and I will always cherish the stories, drinks, and laughs we have shared.
+I would also like to thank Christian Thompson, in particular, for being an excellent cook, an invaluable friend, a great roommate, and the very best mentee I could have ever asked for.
 With Christian, I always had someone nearby to help me debug code, brainstorm ideas, or judge my latest programming sins.
 
 A special thanks go to the family and friends who have supported me throughout this journey. 
-From very early on, my parents have always challenged me to be independent and to pursue my passions, both skills that have served me well throughout my time at ASU.
+From a very early age, my parents have constantly challenged me to be independent and pursue my passions, both skills that have served me well throughout my time at ASU.
 I would not be where I am today without their encouragement and support.
 There are far too many friends to name individually, but I would like to thank you all for putting up with me being in school for so long and always being there whenever I needed a break from the lab.
 
-I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership, and the NASA Space Technology Graduate Research Opportunity for their financial support throughout my Ph.D. 
-This work was supported by a NASA Space Technology Graduate Research Opportunity. 
+I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership and the NASA Space Technology Graduate Research Opportunity (NSTGRO) for their financial support throughout my Ph.D. 
+This work was supported by an NSTGRO. 
 It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
 And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love as my lifelong collaborator. 
