Update on Overleaf.

--- a/src/sections/appendix.tex
+++ b/src/sections/appendix.tex
@@ -1,4 +1,4 @@
-\chapter{ASHTORS Raspberry Pi Compute Module 4 Setup Guide}
+\chapter{ASTHROS Raspberry Pi Compute Module 4 Setup Guide}
 \label{readout/app:cm4_setup}
 From a fresh install of Raspberry Pi OS, we need to install the necessary packages to run the readout system.
 The first step is to enable Secure Shell (SSH) so that we can remotely access the Raspberry Pi.
