First revision push

--- a/main.bib
+++ b/main.bib
@@ -1035,7 +1035,7 @@
 }
 
 @misc{reback2020pandas,
-  author    = {The pandas development team},
+  author    = {{The pandas development team}},
   title     = {pandas-dev/pandas: Pandas},
   month     = feb,
   year      = 2020,
@@ -1429,3 +1429,32 @@
   number  = {11},
   year    = {2009}
 }
+
+@article{Mosby_2020,
+   title={Properties and characteristics of the Nancy Grace Roman Space Telescope H4RG-10 detectors},
+   volume={6},
+   ISSN={2329-4124},
+   url={http://dx.doi.org/10.1117/1.JATIS.6.4.046001},
+   DOI={10.1117/1.jatis.6.4.046001},
+   number={04},
+   journal={Journal of Astronomical Telescopes, Instruments, and Systems},
+   publisher={SPIE-Intl Soc Optical Eng},
+   author={Mosby, Gregory and Rauscher, Bernard J. and Bennett, Chris and Cheng, Edward S. and Cheung, Stephanie and Cillis, Analia and Content, David and Cottingham, Dave and Foltz, Roger and Gygax, John and Hill, Robert J. and Kruk, Jeffrey W. and Mah, Jon and Meier, Lane and Merchant, Chris and Miko, Laddawan and Piquette, Eric C. and Waczynski, Augustyn and Wen, Yiting},
+   year={2020},
+   month=nov }
+
+@article{team2013gildas,
+  title={GILDAS: Grenoble Image and Line Data Analysis Software},
+  author={Team, Gildas},
+  journal={Astrophysics Source Code Library},
+  pages={ascl--1305},
+  year={2013}
+}
+
+@book{tielens2005physics,
+  title={The physics and chemistry of the interstellar medium},
+  author={Tielens, Alexander GGM},
+  year={2005},
+  publisher={Cambridge University Press}
+}
+
