--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -3,7 +3,7 @@ Between the two of you, you have taught me to be a better engineer and scientist
 I would especially like to thank Chris for not only being an amazing mentor, but also a great friend with impeccable taste. 
 In addition, I would also like to thank my committee members, Hannah Kerner, Phil Mauskopf, and Nargess Memarsadeghi, for their contributions and mentorship throughout the years. 
 
-Thank you to Jose Siles, Jon Kawamura, Jorge Pineda, and the rest of the ASTHROS team for all the good times as well as the bad ones.
+Thank you to Jose Siles, Jon Kawamura, Jorge Pineda, and the ASTHROS team for all the good times as well as the bad ones.
 Without Jose's trust in me to take on the role of Software Lead as a graduate student, I would not have had the opportunity to work on such a fantastic project.
 From spicy margaritas in Fort Sumner to howlin' chicken in Pasadena, we have spent countless hours working together to make ASTHROS a reality. 
 I could not have asked for a more fulfilling project to work on.
@@ -25,5 +25,5 @@ This work was supported by an NSTGRO.
 It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
 And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love as my lifelong collaborator. 
-Pursuing a Ph.D is an endeavor in and of itself, but pursuing two Ph.D's at the same time is exponentially more difficult.
+Pursuing a Ph.D is an endeavor in and of itself, but pursuing Ph.D's at the same time is exponentially more difficult.
 Like research, life is not just about the results but the methods we develop along the way, and I am forever grateful for the journey we've taken together and our future work to come.
