--- a/src/sections/appendix.tex
+++ b/src/sections/appendix.tex
@@ -3,16 +3,16 @@
 From a fresh install of Raspberry Pi OS, we need to install the necessary packages to run the readout system.
 The first step is to enable Secure Shell (SSH) so that we can remotely access the Raspberry Pi.
 This can be done in the Raspberry Pi Configuration tool by enabling SSH in the Interfaces tab.
-While we're in the interfaces tool, we can also enable SPI and Remote GPIO. 
+While we are in the interfaces tool, we mmust enable SPI and Remote GPIO. 
 These are necessary to interface with the PMCC.
 
 Next, we need to configure the networking interfaces. 
 \texttt{eth0} is the wired interface to the rest of the readout network. 
 We need a static IP for the CM4 to ensure that other devices on the network can easily find it.
 In the network settings at the top right of the screen, we can select "Edit Connections" under Advanced Options. 
-From there, you will see "Wired connection 1" which is the default name for the wired interface.
+From there is "Wired connection 1" which is the default name for the wired interface.
 Select the interface and navigate to the IPv4 Settings tab.
-Chance the method from "Automatic (DHCP)" to "Manual" and add the IP address, Netmask, and Gateway.
+Change the method from "Automatic (DHCP)" to "Manual" and add the IP address, Netmask, and Gateway.
 For ASTHROS, we have the IP addresses of all CM4s set to \texttt{192.168.1.13X} where \texttt{X} is uniquely assigned to each CM4.
 The Netmask is set to \texttt{23} so we can access all devices on the \texttt{192.168.1.X} readout network as well as the \texttt{192.168.0.X} gondola network.
 Finally, the Gateway is set to \texttt{192.168.1.1} when attached to the gondola and \texttt{192.168.1.101} when attached to the readout network.
@@ -21,7 +21,7 @@ When connected in flight configuration, we disable the NAS's router functionalit
 
 Next, we need to configure the SPI interface to work with the PMCCs.
 This process is different for Compute Module 5s (CM5s) as they have a different SPI driver and interfaces for the GPIO pins.
-While we are in the process of upgrading to CM5s, the current version of the readout, and thus this documentation, is designed for CM4s.
+ASTHROS is currently in the process of upgrading to CM5s, but this documentation is focused on the setup for Compute Module 4s (CM4s).
 The first step is to increase the SPI buffer size.
 This is done by appending the following to the end of the \texttt{/boot/cmdline.txt} file:
 \begin{verbatim}
@@ -47,20 +47,20 @@ While we could, in theory, only use two SPI busses and use the chip select lines
 At this point, it is a good idea to reboot the CM4 to ensure that all changes have taken effect.
 To verify the SPI busses are enabled, we check the \texttt{/dev} directory for the SPI devices which should be \texttt{/dev/spidevX.0} where \texttt{X} is the SPI bus number (0, 3, 4, or 5).
 After rebooting and verifying the SPI has been set up, we recommend connecting the CM4 to the internet through a wireless hotspot in order to install the necessary libraries.
-The first library we need to install is the pigpio.
+The first library we need to install is the \texttt{pigpio}.
 This is a library that allows us to control the GPIO pins on the CM4 without needing root access.
-To install the pigpio library, we need to run the following commands:
+To install the \texttt{pigpio} library, we need to run the following commands:
 \begin{verbatim}
     sudo apt-get update
     sudo apt-get install pigpio
 \end{verbatim}
-After installing the pigpio library, we need to enable the pigpio daemon to run on boot.
+After installing the \texttt{pigpio} library, we need to enable the \texttt{pigpio} daemon to run on boot.
 This is done by running the following command:
 \begin{verbatim}
     sudo systemctl enable pigpiod
 \end{verbatim}
 
-Finally, we need to install the actual Python packages that we will use to control the PMCC.
+Finally, we need to install the custom Python packages that we will use to control the PMCC.
 First we need to clone the \texttt{PyMCC} repository from GitHub.
 This is done by running the following command:
 \begin{verbatim}
