Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 \usepackage{graphicx}                   % For importing image files
 \usepackage{etoolbox}                   % For advanced commands throughout preamble
 \usepackage{microtype}                  %~Improves kerning and protrusion (optional);
-
+\usepackage{lscape}
 \providetoggle{usemicrotype}            % TRUE = microtype is being used
 \makeatletter                           %   (Used to turn of microtype protrusion in the
 \@ifpackageloaded{microtype}%           %   table of contents.)
