--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -21,7 +21,7 @@ I would not be where I am today without their encouragement and support.
 There are far too many friends to name individually, but I would like to thank you all for putting up with me being in school for so long and always being there whenever I needed a break from the lab.
 
 I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership and the NASA Space Technology Graduate Research Opportunity (NSTGRO) for their financial support throughout my Ph.D. 
-This work was supported by an NSTGRO. 
+This work was supported by an NSTGRO and used resources provided by the NASA High-End Computing (HEC) Program through the NASA Center for Climate Simulation (NCCS) at Goddard Space Flight Center.
 It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
 
 And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love as my lifelong collaborator. 
