Update on Overleaf.

--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -22,7 +22,7 @@ There are far too many friends to name individually, but I would like to thank y
 
 I would also like to thank the NASA Jet Propulsion Laboratory (JPL) Strategic University Research Partnership and the NASA Space Technology Graduate Research Opportunity (NSTGRO) for their financial support throughout my Ph.D. 
 This work was supported by an NSTGRO and used resources provided by the NASA High-End Computing (HEC) Program through the NASA Center for Climate Simulation (NCCS) at Goddard Space Flight Center.
-It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL and conferences.
+It was an incredible privilege to have a fellowship that enabled me to never have to worry about funding for my frequent trips to JPL.
 
 And finally, I would like to thank my partner, Cecilia La Place, for her never-ending love as my lifelong collaborator. 
 Pursuing a Ph.D is an endeavor in and of itself, but pursuing Ph.D's at the same time is exponentially more difficult.
