--- a/src/sections/acknowledgments.tex
+++ b/src/sections/acknowledgments.tex
@@ -7,7 +7,7 @@ Thank you to Jose Siles, Jon Kawamura, Jorge Pineda, and the ASTHROS team for al
 Without Jose's trust in me to take on the role of Software Lead as a graduate student, I would not have had the opportunity to work on such a fantastic project.
 From spicy margaritas in Fort Sumner to howlin' chicken in Pasadena, we have spent countless hours working together to make ASTHROS a reality. 
 I could not have asked for a more fulfilling project to work on.
-In the same vein, I would like to thank the Roman Space Telescope Wide Field Instrument Science Data Pipeline (RST WFI SDP) team and the Machine Learning and Instrument Autonomy (MLIA) group for all your support and collaboration.
+In the same vein, I would like to thank the Roman Space Telescope Wide Field Instrument Science Data Processing (RST WFI SDP) team and the Machine Learning and Instrument Autonomy (MLIA) group for all your support and collaboration.
 
 I would also like to thank my fellow graduate students, especially those in the basement, for their years of friendship.
 Without people like, Libby Berkhout, Amy Zhao, Ryan Stephenson, Cody Roberson, Justin Mathewson, Cassandra Whitton, Jonathan Greenfield, Emily Lunde, Mohini Jodhpurkar, Jenna Moore, Isaac Smith, Kyle Massingill, Madeline Hedges, Ricardo Rodriguez, Daniel Lu, Sean Bryan, Tom Mozden, Talia Saeid, Caleb Wheeler, Eric Weeks, Adrian Sinclair, Sam Gordon, Gena Pilyavsky, Marko Neric, Jacob Glasby, Farzad Faramarzi and many, many, others, ISTB4 would be a very dull place to work. 
